#cmake file for project all
#author:ooeyusea
#created:2015-07-08 09:38:00

cmake_minimum_required(VERSION 2.8)
PROJECT(all)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/coroutine)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/test)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/spider)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/storm)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/spark)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/zookeeper)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/game/gate)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/game)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/framework)
#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/logic)
